Update help text

--- a/src/username.html
+++ b/src/username.html
@@ -24,6 +24,9 @@
     <div class="blue window">
       <p>Your pages are available on URLs by your account address or your chosen unique username.</p>
       <p>Do not forget your username as there is no way to retrieve it after setting since it's stored in hashed form.</p>
+      <p>Instead of only being able to link to your pages by account address:<br>newgeocities.com/0x1234.../filename</p>
+      <p>You'll also be able to link based on your username:<br>newgeocities.com/username/filename</p>
+      <p>Usernames never expire and don't cost anything but they do have to be unique! You can change at any time and will receive an error before the transaction if your desired name is not available.</p>
     </div>
     <script src="deps/web3.min.js"></script>
     <script src="deps/coinbase.min.js"></script>
