Add contract links to forms

--- a/src/publish.html
+++ b/src/publish.html
@@ -22,7 +22,7 @@
           <input id="file" type="file">
         </div>
       </fieldset>
-      <p><button type="submit">Submit</button></p>
+      <p><button type="submit">Submit</button> to <a href="https://optimistic.etherscan.io/address/0xebe69e4fbf86094bd9b3cdb679f25a863f299574">contract 0xebe&hellip;9574</a></p>
     </form>
     <div class="blue window">
       <p>Clicking Submit will prompt to connect your Metamask or Coinbase wallet.</p>
