--- a/src/username.html
+++ b/src/username.html
@@ -19,7 +19,7 @@
           <input id="name" placeholder="Name">
         </div>
       </fieldset>
-      <p><button type="submit">Submit</button></p>
+      <p><button type="submit">Submit</button> to <a href="https://optimistic.etherscan.io/address/0xB44Ae7f175c44bD24224933C049Cb7D2C19a3804">contract 0xB44&hellip;8044</a></p>
     </form>
     <div class="blue window">
       <p>Your pages are available on URLs by your account address or your chosen unique username.</p>
